feat: add pandas

--- a/notebooks/analyze.ipynb
+++ b/notebooks/analyze.ipynb
@@ -1,6 +1,176 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 神奈川県のコロナデータ分析"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tsu-nera/repo/hack-for-corona\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "%cd '../'\n",
+    "\n",
+    "import src.tool as tool\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patients = tool.read_patients()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>情報公開日</th>\n",
+       "      <th>発病確認日</th>\n",
+       "      <th>年代</th>\n",
+       "      <th>性別</th>\n",
+       "      <th>職業</th>\n",
+       "      <th>居住地</th>\n",
+       "      <th>備考</th>\n",
+       "      <th>情報元</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>90代</td>\n",
+       "      <td>女性</td>\n",
+       "      <td>無職</td>\n",
+       "      <td>神奈川県横須賀市</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.pref.kanagawa.jp/documents/58277/2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>30代</td>\n",
+       "      <td>男性</td>\n",
+       "      <td>会社員</td>\n",
+       "      <td>神奈川県横浜市</td>\n",
+       "      <td>スペイン在住後帰国</td>\n",
+       "      <td>https://www.pref.kanagawa.jp/documents/58277/2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>2020-03-21</td>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>60代</td>\n",
+       "      <td>男性</td>\n",
+       "      <td>会社員</td>\n",
+       "      <td>神奈川県平塚保健福祉事務所管内</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.pref.kanagawa.jp/docs/ga4/bukanshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>2020-03-21</td>\n",
+       "      <td>2020-03-19</td>\n",
+       "      <td>60代</td>\n",
+       "      <td>男性</td>\n",
+       "      <td>会社員</td>\n",
+       "      <td>神奈川県平塚保健福祉事務所管内</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.pref.kanagawa.jp/docs/ga4/bukanshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>2020-03-21</td>\n",
+       "      <td>2020-03-19</td>\n",
+       "      <td>40代</td>\n",
+       "      <td>男性</td>\n",
+       "      <td>自営業</td>\n",
+       "      <td>神奈川県平塚保健福祉事務所管内</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.pref.kanagawa.jp/docs/ga4/bukanshi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         情報公開日       発病確認日   年代  性別   職業              居住地         備考  \\\n",
+       "68  2020-03-20  2020-03-20  90代  女性   無職         神奈川県横須賀市        NaN   \n",
+       "69  2020-03-20  2020-03-20  30代  男性  会社員          神奈川県横浜市  スペイン在住後帰国   \n",
+       "70  2020-03-21  2020-03-20  60代  男性  会社員  神奈川県平塚保健福祉事務所管内        NaN   \n",
+       "71  2020-03-21  2020-03-19  60代  男性  会社員  神奈川県平塚保健福祉事務所管内        NaN   \n",
+       "72  2020-03-21  2020-03-19  40代  男性  自営業  神奈川県平塚保健福祉事務所管内        NaN   \n",
+       "\n",
+       "                                                  情報元  \n",
+       "68  https://www.pref.kanagawa.jp/documents/58277/2...  \n",
+       "69  https://www.pref.kanagawa.jp/documents/58277/2...  \n",
+       "70  https://www.pref.kanagawa.jp/docs/ga4/bukanshi...  \n",
+       "71  https://www.pref.kanagawa.jp/docs/ga4/bukanshi...  \n",
+       "72  https://www.pref.kanagawa.jp/docs/ga4/bukanshi...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patients.tail(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
