feat: add エリア別感染者数

--- a/notebooks/analyze.ipynb
+++ b/notebooks/analyze.ipynb
@@ -172,6 +172,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patients = patients.drop([\"備考\", \"情報元\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for_area = patients\n",
+    "for_area[\"id\"] = patients.index\n",
+    "for_area[\"居住地\"] = patients[\"居住地\"].apply(tool.cut_ku)\n",
+    "for_area = for_area.groupby(\"居住地\").count().sort_values(\"id\", ascending=False)[\"id\"].to_frame()\n",
+    "for_area.rename(columns={\"id\": \"感染者数\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>感染者数</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>居住地</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>神奈川県相模原市</th>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県横浜市</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県平塚保健福祉事務所管内</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県鎌倉保健福祉事務所管内</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県厚木保健福祉事務所管内</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県横須賀市</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県川崎市</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県藤沢市</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県小田原保健福祉事務所管内</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>神奈川県茅ヶ崎市保健所管内</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  感染者数\n",
+       "居住地                   \n",
+       "神奈川県相模原市            26\n",
+       "神奈川県横浜市             14\n",
+       "神奈川県平塚保健福祉事務所管内      8\n",
+       "神奈川県鎌倉保健福祉事務所管内      6\n",
+       "神奈川県厚木保健福祉事務所管内      5\n",
+       "神奈川県                 4\n",
+       "神奈川県横須賀市             4\n",
+       "神奈川県川崎市              2\n",
+       "神奈川県藤沢市              2\n",
+       "神奈川県小田原保健福祉事務所管内     1\n",
+       "神奈川県茅ヶ崎市保健所管内        1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for_area"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
