wip: もくもく会終了のためmasterマージする

--- a/notebooks/kanagawa-corona.ipynb
+++ b/notebooks/kanagawa-corona.ipynb
@@ -179,7 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patients = patients.drop([\"備考\", \"情報元\"], axis=1)"
+    "patients = patients.drop([\"備考\", \"情報元\"], axis=1)\n",
+    "patients[\"id\"] = patients.index"
    ]
   },
   {
@@ -202,8 +203,222 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##"
+    "groupby = patients.groupby('発病確認日')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_day = pd.DataFrame()\n",
+    "df_by_day[\"感染者数\"] = groupby[\"id\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>感染者数</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>発病確認日</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-15</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-11</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-14</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-16</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-18</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-19</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-20</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-21</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-22</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-24</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-26</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-27</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-28</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-01</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-02</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-05</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-06</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-09</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-10</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-11</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-12</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-14</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-15</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-16</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-17</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-18</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-19</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-20</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            感染者数\n",
+       "発病確認日           \n",
+       "2020-01-15     1\n",
+       "2020-02-11     1\n",
+       "2020-02-13     1\n",
+       "2020-02-14     1\n",
+       "2020-02-16     1\n",
+       "2020-02-18     2\n",
+       "2020-02-19     2\n",
+       "2020-02-20     2\n",
+       "2020-02-21     3\n",
+       "2020-02-22     4\n",
+       "2020-02-24     1\n",
+       "2020-02-26     1\n",
+       "2020-02-27     5\n",
+       "2020-02-28     1\n",
+       "2020-03-01     2\n",
+       "2020-03-02     5\n",
+       "2020-03-05     5\n",
+       "2020-03-06     5\n",
+       "2020-03-09     2\n",
+       "2020-03-10     2\n",
+       "2020-03-11     5\n",
+       "2020-03-12     1\n",
+       "2020-03-14     1\n",
+       "2020-03-15     4\n",
+       "2020-03-16     3\n",
+       "2020-03-17     2\n",
+       "2020-03-18     3\n",
+       "2020-03-19     3\n",
+       "2020-03-20     4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_by_day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,12 +475,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "area_df = patients\n",
-    "area_df[\"id\"] = patients.index\n",
     "area_df[\"居住地\"] = patients[\"居住地\"].apply(tool.cut_ku)\n",
     "area_df = area_df.groupby(\"居住地\").count().sort_values(\"id\", ascending=False)[\"id\"].to_frame()\n",
     "area_df.rename(columns={\"id\": \"感染者数\"}, inplace=True)"
@@ -273,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +583,7 @@
        "神奈川県茅ヶ崎市保健所管内        1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,16 +594,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff87cb2ff10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3ec7ed5510>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -419,19 +633,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "age_df = patients\n",
-    "age_df[\"id\"] = patients.index\n",
     "age_df = age_df.groupby(\"年代\").count()[\"id\"].to_frame()\n",
     "age_df.rename(columns={\"id\": \"感染者数\"}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +725,7 @@
        "90代     2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,16 +736,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff87c2ba710>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3ec7e12d90>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -562,19 +775,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "sex_df = patients\n",
-    "sex_df[\"id\"] = patients.index\n",
     "sex_df = sex_df.groupby(\"性別\").count()[\"id\"].to_frame()\n",
     "sex_df.rename(columns={\"id\": \"感染者数\"}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +837,7 @@
        "男性    43"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
